# connection_aggregation

./: .gitignore  CMakeLists.txt  README.md  daily_records.md
src/: ERRNO_MACRO.h  aggregation_receive.cpp  connection.h  connection_info_t.cpp  connection_info_t.h  connection_srand_t.cpp  connection_t.cpp  connection_t.h  device_t.cpp  device_t.h  fd_guard_t.cpp  fd_guard_t.h  functions.cpp  functions.h  host_t.h  ip_table_t.cpp  ip_table_t.h  main.cpp  net_device_t.cpp  net_device_t.h  net_devices_t.h  net_devices_t_constructor.cpp  net_devices_t_others.cpp  program_t.h  program_t_access.cpp  program_t_constructor.cpp  program_t_local.cpp  program_t_monitor.cpp  program_t_remote.cpp  protocol.h  remote_t.cpp  remote_t.h  srand_t.cpp  srand_t.h  tun_device_t.cpp  tun_device_t.h  typealias.h
src/common/: fd_guard_t.h
src/host/: host_t_access.cpp  host_t_constructor.cpp  host_t_local.cpp  host_t_receive.cpp  host_t_remote.cpp  host_t_send.cpp
src/net_device/: README.md  net_device.cpp  net_device.h  net_devices_t.cpp  net_devices_t.h  tun.cpp
src/program/: program_t_access.cpp  program_t_constructor.cpp  program_t_local.cpp  program_t_receive.cpp  program_t_remote.cpp  program_t_send.cpp
src/utilities/: fixed_thread_pool_t.hpp
src0/: aggregation_send.cpp  fd_guard_t.cpp  net_device_t.cpp  net_device_t.h  net_devices_t_constructor.cpp  program_t.h  protocol.h
src0/program/: program_t_receive.cpp  program_t_remote.cpp
test/: cin_to_list.cpp  cin_to_list.h  get_network_info.cpp  net_monitor.cpp  raw_receiver.cpp  raw_sender.cpp  service.cpp  temp.cpp  test.cpp  udp_receiver.cpp  udp_sender.cpp
